--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,10 @@
 {
-	"id": "sample-plugin",
-	"name": "Sample Plugin",
-	"version": "1.0.0",
-	"minAppVersion": "0.15.0",
-	"description": "Demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
-	"fundingUrl": "https://obsidian.md/pricing",
+	"id": "paste-transform",
+	"name": "Paste transform",
+	"version": "0.0.1",
+	"minAppVersion": "1.5.3",
+	"description": "Handle pasted text and and transform it by regexp rules.",
+	"author": "Rekby",
+	"authorUrl": "https://github.com/rekby/obsidian-paste-transform",
 	"isDesktopOnly": false
 }
