--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -38,7 +38,8 @@ jobs:
 
             - name: create release
               uses: softprops/action-gh-release@v1
-              tag_name: ${{ steps.bump-version.outputs.version }}
-              files: |
-                  main.json
-                  manifest.json
+              with:
+                  tag_name: ${{ steps.bump-version.outputs.version }}
+                  files: |
+                      main.json
+                      manifest.json
