--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -36,7 +36,9 @@ jobs:
                 
 
             - name: build
-              run: npm run build
+              run: |
+                npm install
+                npm run build
 
             - name: push tag to github
               run: git push origin --tags
