--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -47,6 +47,7 @@ jobs:
               uses: softprops/action-gh-release@v1
               with:
                   tag_name: ${{ steps.bump-version.outputs.version }}
+                  generate_release_notes: true
                   files: |
-                      main.json
+                      main.js
                       manifest.json
