--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 	},
 	"keywords": [],
 	"author": "rekby",
-	"license": "MIT",
+	"license": "Apache-2.0",
 	"devDependencies": {
 		"@types/node": "^16.11.6",
 		"@typescript-eslint/eslint-plugin": "5.29.0",
