--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
 	"version": "0.1.2",
 	"minAppVersion": "1.1.8",
 	"description": "Handle pasted text and and transform it by regexp rules.",
-	"author": "Rekby",
+	"author": "Timofey Koolin",
 	"authorUrl": "https://github.com/rekby/obsidian-paste-transform",
 	"isDesktopOnly": false,
 	"license": "Apache-2.0"
