fix authorUrl in manifest.json

--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
 	"minAppVersion": "1.1.8",
 	"description": "Handle pasted text and and transform it by regexp rules.",
 	"author": "Timofey Koolin",
-	"authorUrl": "https://github.com/rekby/obsidian-paste-transform",
+	"authorUrl": "https://github.com/rekby",
 	"isDesktopOnly": false,
 	"license": "Apache-2.0"
 }
