add release title to publish action

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,6 +8,10 @@ on:
                 options:
                     - minor
                     - patch
+            release-title:
+                description: Title for the release
+                required: false
+                type: string
 permissions:
     contents: write
 jobs:
@@ -48,6 +52,7 @@ jobs:
             - name: create release
               uses: softprops/action-gh-release@v1
               with:
+                  name: ${{ steps.bump-version.outputs.version }} ${{ github.event.inputs.release-title }}
                   tag_name: ${{ steps.bump-version.outputs.version }}
                   generate_release_notes: true
                   files: |
