--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -58,3 +58,4 @@ jobs:
                   files: |
                       main.js
                       manifest.json
+                      styles.css
