--- a/package.json
+++ b/package.json
@@ -1,24 +1,33 @@
 {
 	"name": "obsidian-paste-transform-plugin",
-	"version": "0.1.9",
+	"version": "0.2.0",
 	"description": "Plugin for handle paste text and transform it by regexps",
 	"main": "main.js",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
+		"test": "jest",
 		"version": "node version-bump.mjs && git add manifest.json versions.json"
 	},
 	"keywords": [],
 	"author": "rekby",
 	"license": "Apache-2.0",
 	"devDependencies": {
+		"@types/jest": "^29.5.14",
 		"@types/node": "^16.11.6",
 		"@typescript-eslint/eslint-plugin": "5.29.0",
 		"@typescript-eslint/parser": "5.29.0",
 		"builtin-modules": "3.3.0",
 		"esbuild": "0.17.3",
+		"jest": "^29.7.0",
 		"obsidian": "latest",
+		"ts-jest": "^29.2.5",
 		"tslib": "2.4.0",
 		"typescript": "4.7.4"
-	}
+	},
+	"files": [
+		"main.js",
+		"manifest.json",
+		"styles.css"
+	]
 }
